# SwipeX

./: .env.example  .gitignore  Documents - Shortcut.lnk  README.md  desktop.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  requirements.txt  swipex.db
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/ai/: ats_engine.py  generative_tools.py  job_aggregator.py  matching_engine.py  recommendation_engine.py  resume_parser.py  skill_analyzer.py
backend/app/routers/: admin.py  ai_tools.py  analytics.py  applications.py  auth.py  jobs.py  recruiter.py  resumes.py  swipes.py  users.py
backend/app/static/: index.html
backend/tests/: test_api.py  test_audit.py  test_isolation_and_security.py
backend/uploads/: user_1_SwipeX_Volume2_UIUX_Design_Bible.docx
docs/: PRODUCTION_READINESS.md  PRODUCTION_VERIFICATION.md  PROJECT_AUDIT.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AppErrorBoundary.jsx  Footer.jsx  Navbar.jsx  SkeletonLoader.jsx
frontend/src/context/: AuthContext.jsx  NotificationContext.jsx  ThemeContext.jsx
frontend/src/pages/: AdminDashboard.jsx  AppliedJobs.jsx  Dashboard.jsx  ErrorPage.jsx  JobSearch.jsx  LandingPage.jsx  Login.jsx  Profile.jsx  RecruiterDashboard.jsx  ResumeAnalyzer.jsx  SavedJobs.jsx  Signup.jsx  SwipeJobs.jsx
frontend/src/services/: api.js
